test_scores/negative_dimers/features/P50995.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P50995.pkl.xz